# inquiro-ai

./: .gitignore  README.md  docker-compose.yml  evaluate.py  pyproject.toml
app/: config.py  main.py
app/api/: deps.py
app/api/v1/endpoints/: auth.py  chat.py  documents.py
app/core/: ingestion.py  llm.py  rag.py
app/crud/: crud_document.py  crud_user.py
app/db/: init_db.py  session.py
app/models/: __init__.py  document.py  user.py
app/schemas/: __init__.py  chat.py  document.py
backend/: .env.example  docker-compose.yml  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/v1/endpoints/: chat.py  documents.py
backend/app/core/: ingestion.py  llm.py  rag.py  security.py
backend/app/crud/: __init__.py  crud_document.py
backend/app/db/: init_db.py
backend/app/models/: __init__.py  document.py
backend/app/schemas/: chat.py  document.py  token.py  user.py
backend/scripts/: ingest_system_docs.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: AuthGuard.tsx
frontend/src/components/chat/: BotMessage.tsx  ChatArea.tsx  ConfirmationModal.tsx  InputBox.tsx  MessageList.tsx  Sidebar.tsx  UploadModal.tsx  UserMessage.tsx  WelcomeMessage.tsx
frontend/src/store/: authStore.ts
frontend/src/types/: chat.ts
scripts/: evaluate.py
