[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Anh Phan Le Nhat <phanlerda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.13"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
python-dotenv = "^1.1.1"
pydantic-settings = "^2.10.0"
google-generativeai = "^0.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
