[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Anh Phan Le Nhat <phanlerda@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.13"
uvicorn = {extras = ["standard"], version = "^0.34.3"}
python-dotenv = "^1.1.1"
pydantic-settings = "^2.10.0"
google-generativeai = "^0.8.5"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
psycopg2-binary = "^2.9.10"
alembic = "^1.16.2"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
